# UIMADatabaseInterface

./: README.md  pom.xml
.github/workflows/: maven-publish.yml
UIMADatabaseInterface/: pom.xml
UIMADatabaseInterface/src/main/java/org/hucompute/annotation/: Test.java  Typesystem.java  UIMADatabaseInterface.java  UIMADatabaseInterfaceService.java
UIMADatabaseInterface/src/main/java/org/hucompute/annotation/databases/elasticsearch/: Elasticsearch.java  ElasticsearchConnector.java
UIMADatabaseInterface/src/main/java/org/hucompute/annotation/databases/mongo/: Mongo.java
UIMADatabaseInterface/src/main/java/org/hucompute/annotation/databases/neo4j/: Neo4J.java  Neo4JConnector.java  NodeTemplate.java  NodeTemplate_Impl.java  TTRelationshipType.java  neo4j_example.conf
UIMADatabaseInterface/src/main/java/org/texttechnologylab/uimadb/: Test.java  UIMADatabaseInterface.java  UIMADatabaseInterfaceService.java
UIMADatabaseInterface/src/main/java/org/texttechnologylab/uimadb/databases/elasticsearch/: Elasticsearch.java  ElasticsearchConnector.java
UIMADatabaseInterface/src/main/java/org/texttechnologylab/uimadb/databases/mongo/: Mongo.java
UIMADatabaseInterface/src/main/java/org/texttechnologylab/uimadb/databases/neo4j/: Neo4J.java
UIMADatabaseInterface/src/main/java/org/texttechnologylab/uimadb/wrapper/mongo/: MongoConfig.java  MongoConnection.java  MongoHelper.java  mongo.conf
UIMADatabaseInterface/src/main/resources/: elasticsearch_example.conf  mongo_example.conf
src/main/java/org/texttechnologylab/uimadb/: Test.java  Typesystem.java  UIMADatabaseInterface.java  UIMADatabaseInterfaceService.java
src/main/java/org/texttechnologylab/uimadb/databases/couchbase/: Couchbase.java  CouchbaseTest.java
src/main/java/org/texttechnologylab/uimadb/databases/elasticsearch/: Elasticsearch.java  ElasticsearchConnector.java
src/main/java/org/texttechnologylab/uimadb/databases/mongo/: Mongo.java
src/main/java/org/texttechnologylab/uimadb/databases/neo4j/: Neo4J.java  Neo4JConnector.java  NodeTemplate.java  NodeTemplate_Impl.java  TTRelationshipType.java
src/main/java/org/texttechnologylab/uimadb/databases/virtuoso/: Virtuoso.java
src/main/java/org/texttechnologylab/uimadb/wrapper/Virtuoso/c++/: CMakeLists.txt
src/main/java/org/texttechnologylab/uimadb/wrapper/Virtuoso/c++/source/: CMakeLists.txt  Virtuoso.cpp  Virtuoso.hpp  VirtuosoConfig.cpp  VirtuosoConfig.hpp  VirtuosoHelper.cpp  VirtuosoHelper.hpp  pch.h  rapidxml.hpp  rapidxml_unicode.hpp  sparqlib_light.hpp  utils.cpp  utils.hpp  virt.hpp  virtuoso_api.cpp  virtuoso_api.hpp  xml_writer.hpp
src/main/java/org/texttechnologylab/uimadb/wrapper/couchbase/: CouchbaseConfig.java  CouchbaseConnection.java  CouchbaseHelper.java  CouchbaseQueries.java  CouchbaseStorage.java  XmiHandler.java
src/main/java/org/texttechnologylab/uimadb/wrapper/mongo/: Helper.java  MongoConfig.java  MongoConnection.java  MongoHelper.java  MongoSerialization.java
src/main/resources/: couchbase_example.conf
src/main/resources/transformations/: jsonToXCasBase.xslt  xCasToJsonBase.xslt
(+39 files in other folders)
